--- a/slides/slides_code-quality.html
+++ b/slides/slides_code-quality.html
@@ -146,15 +146,14 @@ my_var &lt;- original_var + Modified(new_var)
 Source: [xkcd](https://xkcd.com/1513/)
 ]
 ---
-# Your turn (briefly!)
+# Your turn
 
 #### Where can you improve the readability of your code?
 
-- If you have time:
-  - add strategic whitespace
-  - remove zombie code
+- Run a linter (e.g. `flake8` for Python or `lintr` for R) to identify conflicts with style guides.
   
 - If you find code that is hard to read, make a note to work on it.
+(Schedule time to refactor, but do not do this now!)
 
 _Tip! Use_ `#TODO` _or_ `//TODO` _(depending on your comment marker) to easily find these spots later on.
 Many IDEs extract these into a task list!_
@@ -167,14 +166,6 @@ Many IDEs extract these into a task list!_
 - Writing a tool while doing your analysis
 
 - Stop reinventing the wheel!
-
---
-
-.quote[
-
-Before software can be reusable, it first has to be usable.]
-                                     
-.source[Ralph Johnson]
 
 
 ---
@@ -298,11 +289,12 @@ def my_function(param_a, param_b):
 ![errormanagement](images/errormanagement.svg)
 
 ---
-# Code robustness
+# Make robust code with error management
 
-#### Protect the user with error management:
+#### Protect the user:
 
 - Make assumptions and expectations explicit.
+
   - check values before processing them
   - identify and manage exceptions
 - Produce errors when expectations are not met.
@@ -311,12 +303,22 @@ def my_function(param_a, param_b):
   - log or report the error, to allow the user (or developer) to troubleshoot
   - if necessary: abort the run
   
---
+---
+# Advanced robustness: unit tests
 
-#### Protect the developer with tests:
-- Use errors and error management to test expected behavior
-- Capture unexpected errors to identify options for error management
+#### Protect the developer (you!)
 
+- Test the expected behavior of your functions:
+  - Confirm a known output given a known input
+  - Do errors get produced as expected when the input calls for it?
+  
+- Capture unexpected errors to identify further options for error management
+
+- You can automate running tests when pushing to Github using Continuous Integration
+
+- Tests are **definitely** worth learning when your project increases in size!
+
+_More on tests later..._
 
 ---
 # Throwing an error
@@ -552,25 +554,16 @@ class TestStringMethods(unittest.TestCase):
             read_vector_value(5)
 ```
 
-- Normal call
+Run the tests by calling `unittest.main()`
 
-
-```python
-unittest.main()
-```
-
----
-# With a Jupyter notebook
-
-- Notebook call
-
+Or, when working in a notebook:
 
 ```python
 unittest.main(argv=['trick to make it work in a notebook'], exit=False)
 ```
 
 ```
-## &lt;unittest.main.TestProgram object at 0x11a8f0ba8&gt;
+## &lt;unittest.main.TestProgram object at 0x7f9cf5ae9320&gt;
 ## 
 ## ..
 ## ----------------------------------------------------------------------
@@ -578,7 +571,6 @@ unittest.main(argv=['trick to make it work in a notebook'], exit=False)
 ## 
 ## OK
 ```
-
 ---
 # Making a test fail
 
@@ -601,7 +593,7 @@ class TestStringMethods(unittest.TestCase):
 
 
 ```
-## &lt;unittest.main.TestProgram object at 0x11a8ffdd8&gt;
+## &lt;unittest.main.TestProgram object at 0x7f9cf5b067f0&gt;
 ## 
 ## ..F
 ## ======================================================================
@@ -616,12 +608,6 @@ class TestStringMethods(unittest.TestCase):
 ## 
 ## FAILED (failures=1)
 ```
----
-# Your turn
-- Write a unit test for your function
-- Does your function behave like you want?
-- Can you make your function raise unforseen errors/exceptions?
-- Inspect R and python documentation to get acquainted with different assertions (e.g., assertEqual)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -669,6 +655,32 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();
 // adds .remark-code-has-line-highlighted class to <pre> parent elements
 // of code chunks containing highlighted lines with class .remark-code-line-highlighted
 (function(d) {
@@ -686,17 +698,6 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   }
   preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
 })(document);</script>
-
-<script>
-(function() {
-  var links = document.getElementsByTagName('a');
-  for (var i = 0; i < links.length; i++) {
-    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
-      links[i].target = '_blank';
-    }
-  }
-})();
-</script>
 
 <script>
 slideshow._releaseMath = function(el) {
