--- a/slides/slides_code-quality.html
+++ b/slides/slides_code-quality.html
@@ -289,7 +289,7 @@ def my_function(param_a, param_b):
 ![errormanagement](images/errormanagement.svg)
 
 ---
-# Make robust code with error management
+# Error management
 
 #### Protect the user:
 
@@ -298,6 +298,7 @@ def my_function(param_a, param_b):
   - check values before processing them
   - identify and manage exceptions
 - Produce errors when expectations are not met.
+
 - Consider error options, and perform error management:
   - redirect the program
   - log or report the error, to allow the user (or developer) to troubleshoot
@@ -563,11 +564,11 @@ unittest.main(argv=['trick to make it work in a notebook'], exit=False)
 ```
 
 ```
-## &lt;unittest.main.TestProgram object at 0x7f9cf5ae9320&gt;
+## &lt;unittest.main.TestProgram object at 0x7f9cf5b06710&gt;
 ## 
 ## ..
 ## ----------------------------------------------------------------------
-## Ran 2 tests in 0.000s
+## Ran 2 tests in 0.001s
 ## 
 ## OK
 ```
@@ -593,7 +594,7 @@ class TestStringMethods(unittest.TestCase):
 
 
 ```
-## &lt;unittest.main.TestProgram object at 0x7f9cf5b067f0&gt;
+## &lt;unittest.main.TestProgram object at 0x7f9cf5af14a8&gt;
 ## 
 ## ..F
 ## ======================================================================
@@ -604,7 +605,7 @@ class TestStringMethods(unittest.TestCase):
 ## AssertionError: 10 != 11
 ## 
 ## ----------------------------------------------------------------------
-## Ran 3 tests in 0.000s
+## Ran 3 tests in 0.001s
 ## 
 ## FAILED (failures=1)
 ```
