--- a/slides/slides_reproducibility.html
+++ b/slides/slides_reproducibility.html
@@ -58,7 +58,7 @@ Zenodo has a sandbox environment!
 - Only do this following exercise if you are OK with your code staying online!
 - You will not be able to do this with a private repository.
 
-Zenodo and Github have a pipeline that makes your life easier! (_Check the full how-to [on GitHub](https://guides.github.com/activities/citable-code/)._)
+Zenodo and Github have a pipeline that makes your life easier! (_Check the full how-to [on GitHub](https://docs.github.com/en/repositories/archiving-a-github-repository/referencing-and-citing-content#issuing-a-persistent-identifier-for-your-repository-with-zenodo)._)
 
 #### Your turn:
 - Go to: [sandbox.zenodo.org](https://sandbox.zenodo.org/), and log in with GitHub. (If you do not have GitHub, simply sign up for a zenodo account; some of the coming steps you will need to do manually...)
@@ -69,12 +69,13 @@ Zenodo and Github have a pipeline that makes your life easier! (_Check the full 
 # Select your repository
 
 
-![toggle](https://guides.github.com/activities/citable-code/zenodo-toggle-on.png)
+![toggle](https://web.archive.org/web/20211021121037if_/https://guides.github.com/activities/citable-code/zenodo-toggle-on.png)
+
 ---
 # Release your project!
 
 
-![release](https://guides.github.com/activities/citable-code/repo-view.png)
+![release](https://web.archive.org/web/20211026201828if_/https://guides.github.com/activities/citable-code/repo-view.png)
 
 ... and follow the workflow!
 
@@ -97,7 +98,7 @@ A version has three numbers: MAJOR.MINOR.PATCH
 
 Your code is now uploading to Zenodo: you can check it under the 'upload' tab:
 
-![citable-upload](https://guides.github.com/activities/citable-code/upload-tab.png)
+![citable-upload](https://web.archive.org/web/20211026201828if_/https://guides.github.com/activities/citable-code/upload-tab.png)
 ---
 # Getting your DOI
 
@@ -105,7 +106,7 @@ Your code is now uploading to Zenodo: you can check it under the 'upload' tab:
 - Click 'publish'
 - Voilá!
 
-![zenodo-upload](https://guides.github.com/activities/citable-code/zenodo-form.png)
+![zenodo-upload](https://web.archive.org/web/20211026201828if_/https://guides.github.com/activities/citable-code/zenodo-form.png)
 ---
 # Getting your DOI
 
