--- a/book/slides/slides_code-quality.html
+++ b/book/slides/slides_code-quality.html
@@ -653,7 +653,7 @@ unittest.main(argv=['trick to make it work in a notebook'], exit=False)
 ```
 
 ```
-## &lt;unittest.main.TestProgram object at 0x000001F54CB10F90&gt;
+## &lt;unittest.main.TestProgram object at 0x0000027EB331AB10&gt;
 ## 
 ## ..
 ## ----------------------------------------------------------------------
@@ -683,7 +683,7 @@ class TestStringMethods(unittest.TestCase):
 
 
 ```
-## &lt;unittest.main.TestProgram object at 0x000001F54CB79950&gt;
+## &lt;unittest.main.TestProgram object at 0x0000027EB3399050&gt;
 ## 
 ## ..F
 ## ======================================================================
